src/Tree/Card.css
.card {
    color: #333;
    width: 100px;
    height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .name {
        width: 90%;
        text-align: center;
        background-color: transparent;
        border: none;
        outline: none;
        font-size: 1.2rem;
        resize: none;
        
    }


    &.new {
        background-color: #ffff86;
        border: 1px solid #7a7a40;
    }

    &.doing {
        background-color: #b8d7fa;
        border: 1px solid #17455d;
    }

    &.done {
        background-color: #b0f399;
        border: 1px solid #3f6c1c;
    }

    &.canceled {
        background-color: #ddd;
        border: 1px solid #555;
    }
}

